[package]
name = "kno"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A command line tool for managing notes"
authors = ["Raffaele Cataldo"]
repository = "https://github.com/farmeroy/kno"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.58", features = ["derive"] }
clap_complete = { version = "4.5.66", features = ["unstable-dynamic"] }

[dev-dependencies]
tempfile = "3.25.0"
